# zk-torch

./: .gitignore  Cargo.toml  README.md  config.yaml  gen.py  mul.onnx  network.onnx  resnet.yaml  sample.json  sample.onnx  unet.yaml
.github/workflows/: gpu.yml  rust.yml
scratch/3dunet/: 3dunet.py
scratch/bert/: replace_reshape_trans.py
scratch/gptj/: replace_multihead.py  replace_rope.py
scratch/replace_onnx_nodes/gptj/: replace_gelu.py
scratch/resnet/: resnet.py
scratch/retinanet/: retinanet_prune_inference.py  retinanet_replace_preprocessing.py
scratch/vail/exp1/: tutorial_config.yaml  tutorial_prepare.py
src/: basic_block.rs  batched_basic_block.rs  graph.rs  layer.rs  lib.rs  main.rs  onnx.rs  onnx_converter.rs  ptau.rs  setup.rs  tests.rs  util.rs
src/basic_block/: abs.rs  add.rs  alternate.rs  alternating.rs  bit_decomposition.rs  bool_check.rs  bridge.rs  clip.rs  concat.rs  constant.rs  conv.rs  copy_constraint.rs  cq.rs  cq2.rs  cqlin.rs  div.rs  eq.rs  exp.rs  id.rs  less.rs  log.rs  matmul.rs  matmul_fixed.rs  matmult.rs  max.rs  max_v1.rs  mul.rs  new_conv.rs  one_to_one.rs  ops.rs  ordered.rs  permute.rs  plookup.rs  pow.rs  range.rs  relu.rs  repeater.rs  reshape.rs  rope.rs  sigmoid.rs  (+7 more)
src/layer/: add.rs  and.rs  arithmetic.rs  cast.rs  ceil.rs  clip.rs  concat.rs  constantofshape.rs  conv.rs  cqlin.rs  div.rs  einsum.rs  equal.rs  erf.rs  expand.rs  flatten.rs  gather.rs  gathernd.rs  gemm.rs  less.rs  lstm.rs  matmul.rs  max.rs  modulo.rs  mul.rs  neg.rs  new_conv.rs  new_maxpool.rs  nonlinear.rs  nonzero.rs  norm.rs  not.rs  pool.rs  pow.rs  range.rs  reducemean.rs  relu.rs  reshape.rs  resize.rs  rope.rs  (+13 more)
src/util/: arithmetic.rs  array.rs  batch.rs  config.rs  copy_constraint.rs  err.rs  fft.rs  fold.rs  iter.rs  msm.rs  onnx.rs  poly.rs  prover.rs  random.rs  serialization.rs  shape.rs  verifier.rs
test_gpu_scripts/: README.md  add_gpu_dependencies.py  notify.py  notify_by_email.py  notify_enqueue.py  notify_result.py  notify_test_result.py  test_gpu.sbatch
tests/: test_basicblocks.rs  test_layers.rs
tests/ops/: Add.onnx  Cast.onnx  Ceil.onnx  Concat.onnx  ConstantOfShape.onnx  Div.onnx  Gather.onnx  LSTM.onnx  MatMul.onnx  Mul.onnx  Pow.onnx  Range.onnx  ReduceMean.onnx  Relu.onnx  ScatterND.onnx  Shape.onnx  Sub.onnx
