[package]
name = "zkml_proofs"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-std = {version = "0.4", features = ["parallel"]}
ark-ff = {version = "0.4", features = ["parallel"]}
ark-ec = "0.4"
ark-poly = {version = "0.4", features = ["parallel"]}
ark-bn254 = "0.4"
ark-serialize = { version = "0.4", features = ["derive"] }
serde = { version = "1.0.201", features = ["derive"] }
rand = "0.8.5"
rayon = "1"
ndarray = { version = "0.15.6", features = ["serde", "rayon"] }
tract-onnx = "0.21.2"
sha3 = "0.10.8"
bincode = "1.3.3"
itertools = "0.13.0"
icicle-cuda-runtime = { path = "/projects/illinois/eng/cs/ddkang/bjchen4/gpu/icicle/wrappers/rust/icicle-cuda-runtime" }
icicle-core = { path = "/projects/illinois/eng/cs/ddkang/bjchen4/gpu/icicle/wrappers/rust/icicle-core", features = ["arkworks"]}
icicle-bn254 = { path = "/projects/illinois/eng/cs/ddkang/bjchen4/gpu/icicle/wrappers/rust/icicle-curves/icicle-bn254" , features = ["arkworks", "g2"]}

[features]
debug = []
gpu = []
