[package]
name = "zk_torch"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-std = { version = "0.4", features = ["parallel"] }
ark-ff = { version = "0.4", features = ["parallel"] }
ark-ec = "0.4"
ark-poly = { version = "0.4", features = ["parallel"] }
ark-bn254 = "0.4"
ark-serialize = { version = "0.4", features = ["derive"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
once_cell = "1.15"
log = { version = "0.4.14", default-features = false }
env_logger = { version = "0.10" }
plonky2 = { version = "0.2.2", features = ["timing"] }
rand = "0.8.5"
rayon = "1"
ndarray = { version = "0.15.6", features = ["serde", "rayon"] }
tract-onnx = "=0.21.6"
sha3 = "0.10.8"
bincode = "1.3.3"
itertools = "0.13.0"
downcast-rs = "2.0.1"

[features]
debug = []
gpu = []
mock_prove = []
fold = []
